--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -66,7 +66,7 @@
     <string name="about_developers_title">Програмери</string>
     <string name="about_developers">Стефан Нидерман (Stefan Niedermann), HeaDBanGer84</string>
     <string name="about_translators_title">Преводиоци</string>
-    <string name="about_translators">Младен Пејаковић (српски), ageru (Français (France))</string>
+    <string name="about_translators">Младен Пејаковић (српски), ageru (Français (France)), proninyaroslav (Russian)</string>
     <string name="about_testers_title">Тестери</string>
     <string name="about_testers">Јан Борхарт (Jan C. Borchardt)</string>
     <string name="about_source_title">Изворни кôд</string>
