Added Felix Edelmann to developers (see #109)

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -61,7 +61,7 @@
     <string name="about_maintainer_title">Responsable</string>
     <string name="about_maintainer"><a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
     <string name="about_developers_title">Developpeurs</string>
-    <string name="about_developers">Stefan Niedermann, HeaDBanGer84</string>
+    <string name="about_developers">Stefan Niedermann, HeaDBanGer84, Felix Edelmann</string>
     <string name="about_translators_title">Traducteurs</string>
     <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian)</string>
     <string name="about_testers_title">Testeurs</string>
