--- a/app/src/main/res/values-hy/strings.xml
+++ b/app/src/main/res/values-hy/strings.xml
@@ -63,7 +63,7 @@
     <string name="about_maintainer_title">ղեկավար</string>
     <string name="about_maintainer"><a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
     <string name="about_developers_title">ծրագրավորող</string>
-    <string name="about_developers">Stefan Niedermann, HeaDBanGer84</string>
+    <string name="about_developers">Stefan Niedermann, HeaDBanGer84, Felix Edelmann</string>
     <string name="about_translators_title">թարգմանիչ</string>
     <string name="about_translators">Արթուր Դավթյան, ageru (Français (France)), proninyaroslav (Russian)</string>
     <string name="about_testers_title">թեսթավորող</string>
