--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -64,7 +64,7 @@
     <string name="about_maintainer_title">Главни програмер</string>
     <string name="about_maintainer"><a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
     <string name="about_developers_title">Програмери</string>
-    <string name="about_developers">Стефан Нидерман (Stefan Niedermann), HeaDBanGer84</string>
+    <string name="about_developers">Стефан Нидерман (Stefan Niedermann), HeaDBanGer84, Felix Edelmann</string>
     <string name="about_translators_title">Преводиоци</string>
     <string name="about_translators">Младен Пејаковић (српски), ageru (Français (France)), proninyaroslav (Russian)</string>
     <string name="about_testers_title">Тестери</string>
