Added mist between tranlastors to other language strings.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -62,7 +62,7 @@
     <string name="about_developers_title">Entwickler</string>
     <string name="about_developers">Stefan Niedermann, HeaDBanGer84, Felix Edelmann</string>
     <string name="about_translators_title">Übersetzer</string>
-    <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian)</string>
+    <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian), mist (Czech)</string>
     <string name="about_testers_title">Tester</string>
     <string name="about_testers">Jan C. Borchardt</string>
     <string name="about_source_title">Quellcode</string>
