--- a/app/src/main/res/values-hy/strings.xml
+++ b/app/src/main/res/values-hy/strings.xml
@@ -65,7 +65,7 @@
     <string name="about_developers_title">ծրագրավորող</string>
     <string name="about_developers">Stefan Niedermann, HeaDBanGer84, Felix Edelmann</string>
     <string name="about_translators_title">թարգմանիչ</string>
-    <string name="about_translators">Արթուր Դավթյան, ageru (Français (France)), proninyaroslav (Russian)</string>
+    <string name="about_translators">Արթուր Դավթյան, ageru (Français (France)), proninyaroslav (Russian), mist (Czech)</string>
     <string name="about_testers_title">թեսթավորող</string>
     <string name="about_testers">Jan C. Borchardt</string>
     <string name="about_source_title">ծրագրի կոդը</string>
