restructure the communication between synchronization task and user interface using callbacks, only try to sync if not offline, otherwise show an error message.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -49,6 +49,7 @@
     <string name="error_invalid_login">Login fehlgeschlagen: %1$s</string>
     <string name="error_json">ist die Server-App ownCloud Notes aktiviert?</string>
     <string name="error_io">Server-Verbindung nicht möglich</string>
+    <string name="error_no_network">keine Netzwerk-Verbindung</string>
     <string name="error_server">URL/Server fehlerhaft</string>
     <string name="error_url_malformed">URL nicht korrekt</string>
     <string name="error_username_password_invalid">Benutzername / Passwort nicht korrekt</string>
