--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="error_invalid_login">Invalid login: %1$s</string>
     <string name="error_json">is the owncloud Notes app activated on the server?</string>
     <string name="error_io">server connection is broken</string>
+    <string name="error_no_network">no network connection</string>
     <string name="error_server">URL/Server has errors</string>
     <string name="error_url_malformed">Wrong server address</string>
     <string name="error_username_password_invalid">Wrong username or password</string>
