--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ownCloud Notes</string>
+    <string name="app_name">Notes</string>
     <string name="no_notes">Sem notas ainda</string>
     <string name="action_create">Nova nota</string>
     <string name="action_settings">Definições</string>
