More precise error message and logging if `!isSyncPossible()`

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -44,6 +44,7 @@
     <string name="network_disconnected">Kein Netzwerk verfügbar</string>
 
     <!-- Error -->
+    <string name="error_sync_not_possible">Bitte Netzwerk verbinden und Account einstellen</string>
     <string name="error_sync">Synchronisation fehlgeschlagen: %1$s</string>
     <string name="error_invalid_login">Login fehlgeschlagen: %1$s</string>
     <string name="error_json">ist die Server-App ownCloud Notes aktiviert?</string>
