--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ownCloud Notes</string>
+    <string name="app_name">Notas</string>
     <string name="no_notes">Sem notas ainda</string>
     <string name="action_create">Nova nota</string>
     <string name="action_settings">Definições</string>
@@ -45,9 +45,12 @@
     <string name="network_disconnected">Rede não disponível</string>
 
     <!-- Error -->
-    <string name="error_json">Erro JSON</string>
-    <string name="error_io">Erro IO</string>
-    <string name="error_invalid_login">Início de sessão inválido</string>
+    <string name="error_sync">A sincronização falhou: %1$s</string>
+    <string name="error_invalid_login">Início de sessão inválido: %1$s</string>
+    <string name="error_json">a aplicação ownCloud Notes está ativada no servidor?</string>
+    <string name="error_io">sem ligação ao servidor</string>
+    <string name="error_no_network">sem ligação à rede</string>
+    <string name="error_server">O URL/servidor contém erros</string>
     <string name="error_url_malformed">Endereço do servidor errado</string>
     <string name="error_username_password_invalid">Nome de utilizador ou palavra-passe errados</string>
 
@@ -57,13 +60,13 @@
 
     <!-- About -->
     <string name="about_version_title">Versão</string>
-    <string name="about_version">Está atualmente a usar a versão <strong>v0.8.1</strong></string>
+    <string name="about_version">Está atualmente a usar a versão <strong>v0.9.1</strong></string>
     <string name="about_maintainer_title">Mantenedor</string>
     <string name="about_maintainer"><a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
     <string name="about_developers_title">Desenvolvedores</string>
     <string name="about_developers">Stefan Niedermann, HeaDBanGer84, Felix Edelmann</string>
     <string name="about_translators_title">Tradutores</string>
-    <string name="about_translators">pejakm (Serbe), ageru (Français (France)), proninyaroslav (Russian)</string>
+    <string name="about_translators">pejakm (Sérvio), ageru (Francês (França)), proninyaroslav (Russo), mist (Checo)</string>
     <string name="about_testers_title">Experimentadores</string>
     <string name="about_testers">Jan C. Borchardt</string>
     <string name="about_source_title">Código fonte</string>
