--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -57,7 +57,7 @@
 
     <!-- About -->
     <string name="about_version_title">Verze</string>
-    <string name="about_version">Právě používáte <strong>v0.9.0</strong></string>
+    <string name="about_version">Právě používáte <strong>%1$s</strong></string>
     <string name="about_maintainer_title">Správce</string>
     <string name="about_maintainer"><a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
     <string name="about_developers_title">Vývojáři</string>
