--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,6 +17,7 @@
     <string name="menu_copy">Kopieren</string>
     <string name="menu_edit">Bearbeiten</string>
     <string name="menu_cancel">Abbrechen</string>
+    <string name="menu_favorite">Favorit</string>
     <string name="menu_preview">Vorschau</string>
     <string name="menu_share">Teilen</string>
     <string name="menu_about">Über</string>
