--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,8 @@
     <string name="widget_all_notes_title">All notes</string>
     <string name="widget_single_note_title">Single note</string>
 
+    <string name="drawer_opened">Drawer opened</string>
+    <string name="drawer_closed">Drawer closed</string>
 
     <!-- Plurals -->
     <plurals name="ab_selected">
