--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,8 @@
     <string name="widget_all_notes_title">All notes</string>
     <string name="widget_single_note_title">Single note</string>
 
+    <!-- Shortcuts -->
+    <string name="shortcut_create_long">Create a new note</string>
 
     <!-- Plurals -->
     <plurals name="ab_selected">
