--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="listview_updated_earlier">Earlier</string>
 
     <!-- Settings -->
+    <string name="settings_server_header">Server Settings</string>
     <string name="settings_server">Server</string>
     <string name="settings_url">Server address</string>
     <string name="settings_url_check_description">Shows if the address can be pinged.</string>
@@ -45,7 +46,16 @@
     <string name="settings_password_check_description">Shows if the credentials are correct.</string>
     <string name="settings_submit">Connect</string>
     <string name="settings_submitting">Connecting &#8230;</string>
+    <string name="settings_notification_header">Notification</string>
     <string name="settings_notification">Enable to show a persistant notification for quickly creating new notes.</string>
+    <string name="settings_cert_header">Certificates</string>
+    <string name="settings_cert_trust_system">Trust certificates from system trust store.</string>
+    <string name="settings_cert_reset">Reset trust store</string>
+    <string name="settings_cert_reset_toast">Stored trust information cleared.</string>
+
+    <!-- Certificates -->
+    <string name="certificate_notification_connection_security">Notes - Connection security</string>
+    <string name="trust_certificate_unknown_certificate_found">Notes has encountered an unknown certificate. Do you want to trust it?</string>
 
     <!-- Network -->
     <string name="network_connecting">Connecting</string>
