--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="listview_updated_earlier">Earlier</string>
 
     <!-- Settings -->
-    <string name="settings_server_header">Server Settings</string>
+    <string name="settings_server_settings">Server Settings</string>
     <string name="settings_server">Server</string>
     <string name="settings_url">Server address</string>
     <string name="settings_url_check_description">Shows if the address can be pinged.</string>
@@ -46,9 +46,9 @@
     <string name="settings_password_check_description">Shows if the credentials are correct.</string>
     <string name="settings_submit">Connect</string>
     <string name="settings_submitting">Connecting &#8230;</string>
-    <string name="settings_notification_header">Notification</string>
+    <string name="settings_notification_category">Notification</string>
     <string name="settings_notification">Enable to show a persistant notification for quickly creating new notes.</string>
-    <string name="settings_cert_header">Certificates</string>
+    <string name="settings_cert_category">Certificates</string>
     <string name="settings_cert_trust_system">Trust certificates from system trust store.</string>
     <string name="settings_cert_reset">Reset trust store</string>
     <string name="settings_cert_reset_toast">Stored trust information cleared.</string>
