--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -35,7 +35,7 @@
     <string name="listview_updated_earlier">Früher</string>
 
     <!-- Settings -->
-    <string name="settings_server_settings">Server Einstellungen</string>
+    <string name="settings_server_settings">Kontoeinstellungen</string>
     <string name="settings_server">Server</string>
     <string name="settings_url">Server-Adresse</string>
     <string name="settings_url_check_description">Zeigt an, ob die angegebene URL erreichbar ist.</string>
