--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="listview_updated_earlier">Earlier</string>
 
     <!-- Settings -->
-    <string name="settings_server_settings">Server Settings</string>
+    <string name="settings_server_settings">Account Settings</string>
     <string name="settings_server">Server</string>
     <string name="settings_url">Server address</string>
     <string name="settings_url_check_description">Shows if the address can be pinged.</string>
