--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -45,7 +45,7 @@
     <string name="settings_password_check_description">Zeigt an, ob die angegebenen Zugangsdaten korrekt sind.</string>
     <string name="settings_submit">Verbinden</string>
     <string name="settings_submitting">Verbindet&#8230;</string>
-    <string name="settings_notification_category">Benachrichtigung</string>
+    <string name="settings_other_category">Allgemeine Einstellungen</string>
     <string name="settings_notification">Aktivieren, um eine dauerhafte Benachrichtigung zur schnellen Eingabe von Notizen anzuzeigen.</string>
     <string name="settings_cert_category">Zertifikate</string>
     <string name="settings_cert_trust_system">Zertifikaten aus System Trust Store vertrauen.</string>
