--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,8 +46,9 @@
     <string name="settings_password_check_description">Shows if the credentials are correct.</string>
     <string name="settings_submit">Connect</string>
     <string name="settings_submitting">Connecting &#8230;</string>
-    <string name="settings_notification_category">Notification</string>
+    <string name="settings_other_category">General Settings</string>
     <string name="settings_notification">Enable to show a persistant notification for quickly creating new notes.</string>
+    <string name="settings_note_mode">How should notes be opened</string>
     <string name="settings_cert_category">Certificates</string>
     <string name="settings_cert_trust_system">Trust certificates from system trust store.</string>
     <string name="settings_cert_reset">Reset trust store</string>
