Create Note Widget Addition of "Create Note" widget as referenced in https://github.com/stefan-niedermann/nextcloud-notes/issues/15.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,7 @@
 
     <string name="widget_all_notes_title">All notes</string>
     <string name="widget_single_note_title">Single note</string>
+    <string name="widget_create_note">Create Note</string>
 
     <!-- Shortcuts -->
     <string name="shortcut_create_long">Create a new note</string>
