--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,7 +115,7 @@
     <string name="widget_single_note_title">Single note</string>
     <string name="widget_create_note">Create Note</string>
 
-    <string name="activity_select_single_note">Select Note</string>
+    <string name="activity_select_single_note">Select note</string>
 
     <!-- Shortcuts -->
     <string name="shortcut_create_long">Create a new note</string>
