--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,14 +49,17 @@
     <string name="settings_password_check_description">Shows if the credentials are correct.</string>
     <string name="settings_submit">Connect</string>
     <string name="settings_submitting">Connecting &#8230;</string>
-    <string name="settings_view_category">View Settings</string>
-    <string name="settings_note_mode">How should notes be opened</string>
-    <string name="settings_notification_category">Notification</string>
-    <string name="settings_notification">Enable to show a persistant notification for quickly creating new notes.</string>
+    <string name="settings_view_category">View settings</string>
+    <string name="settings_note_mode">Display mode for notes</string>
+    <string name="settings_notification_title">\"Create note\" as notification</string>
+    <string name="settings_notification">Enable to show a persistent notification for quickly creating new notes.</string>
     <string name="settings_cert_category">Certificates</string>
-    <string name="settings_cert_trust_system">Trust certificates from system trust store.</string>
-    <string name="settings_cert_reset">Reset trust store</string>
-    <string name="settings_cert_reset_toast">Stored trust information cleared.</string>
+    <string name="settings_cert_trust_system">Trust system certificates</string>
+    <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
+    <string name="settings_cert_trust_system_off">System and user-added CAs won\'t be trusted</string>
+    <string name="settings_cert_reset">Reset (un)trusted certificates</string>
+    <string name="settings_cert_reset_summary">Resets trust of all custom certificates</string>
+    <string name="settings_cert_reset_toast">All custom certificates have been cleared</string>
 
     <!-- Certificates -->
     <string name="certificate_notification_connection_security">Notes - Connection security</string>
@@ -119,6 +122,13 @@
 
     <!-- Shortcuts -->
     <string name="shortcut_create_long">Create a new note</string>
+
+    <!-- Array: note modes -->
+    <string-array name="noteMode_entries">
+        <item>Open in edit mode</item>
+        <item>Open in preview mode</item>
+        <item>Remember my last selection</item>
+    </string-array>
 
     <!-- Plurals -->
     <plurals name="ab_selected">
