Note list widget Widget to display all notes in the database, sorted by starred, modified.
updateNoteListWidgets() used temporarily for widget updates until
content observer is implemented.

Move star icon to the right and adjust padding to match

Fixed update mechanism for NoteListWidget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,9 +116,11 @@
     <string name="about_contribution_tab_title">Contribution</string>
     <string name="about_license_tab_title">License</string>
 
-    <string name="widget_all_notes_title">All notes</string>
+    <!-- Widgets -->
+    <string name="widget_note_list_title">Note list</string>
     <string name="widget_single_note_title">Single note</string>
     <string name="widget_create_note">Create Note</string>
+    <string name="widget_not_logged_in">Please login to Notes before using this widget</string>
 
     <string name="activity_select_single_note">Select note</string>
 
