--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -14,12 +14,21 @@
     <string name="action_edit_cancel">Cancelar</string>
     <string name="action_about">Sobre</string>
     <string name="action_select_note">Selecionar nota</string>
+    <string name="action_note_deleted">Nota eliminada</string>
+    <string name="action_note_restored">Nota restaurada</string>
+    <string name="action_undo">Anular</string>
     <string name="menu_delete">Eliminar</string>
     <string name="menu_copy">Copiar</string>
     <string name="menu_edit">Editar</string>
+    <string name="menu_cancel">Cancelar</string>
+    <string name="menu_change_category">Categoria</string>
+    <string name="menu_favorite">Favorito</string>
+    <string name="menu_preview">Pré-visualizar</string>
     <string name="menu_share">Partilhar</string>
     <string name="menu_about">Sobre</string>
 
+    <string name="change_category_title">Escolher categoria</string>
+    <string name="change_category_message">Por favor introduza um nome para a categoria</string>
     <string name="copy">Copiar</string>
 
     <string name="listview_updated_today">Hoje</string>
@@ -29,62 +38,93 @@
     <string name="listview_updated_earlier">Anteriormente</string>
 
     <!-- Settings -->
+    <string name="settings_server_settings">Definições da conta</string>
     <string name="settings_server">Servidor</string>
     <string name="settings_url">Endereço do servidor</string>
     <string name="settings_url_check_description">Mostra se o endereço pode ser acedido.</string>
-    <string name="settings_url_warn_http">AVISO: "http" é inseguro. Por favor utilize "https".</string>
+    <string name="settings_url_warn_http">AVISO: "http" é inseguro. Por favor use "https".</string>
     <string name="settings_username">Nome de utilizador</string>
     <string name="settings_password">Palavra-passe</string>
+    <string name="settings_password_unchanged">Palavra-passe (não alterada)</string>
     <string name="settings_password_check_description">Mostra se as credenciais estão corretas.</string>
     <string name="settings_submit">Conectar</string>
     <string name="settings_submitting">A conectar &#8230;</string>
+    <string name="settings_view_category">Definições de visualização</string>
+    <string name="settings_note_mode">Modo de exibição das notas</string>
+    <string name="settings_notification_title">\"Criar nota\" como notificação</string>
+    <string name="settings_notification">Ativar para mostrar uma notificação persistente para criar novas notas rapidamente.</string>
+    <string name="settings_cert_category">Certificados</string>
+    <string name="settings_cert_trust_system">Confiar nos certificados do sistema</string>
+    <string name="settings_cert_trust_system_on">As ACs do sistema e adicionadas pelo utilizador serão confiadas (recomendado)</string>
+    <string name="settings_cert_trust_system_off">As ACs do sistema e adicionadas pelo utilizador não serão confiadas</string>
+    <string name="settings_cert_reset">Remover os certificados (não) confiados</string>
+    <string name="settings_cert_reset_summary">Remove a confiança de todos os certificados personalizados</string>
+    <string name="settings_cert_reset_toast">Todos os certificados personalizados foram removidos</string>
+
+    <!-- Certificates -->
+    <string name="certificate_notification_connection_security">Notas - Segurança da ligação</string>
+    <string name="trust_certificate_unknown_certificate_found">Notas encontrou um certificado desconhecido. Pretende confiar?</string>
 
     <!-- Network -->
     <string name="network_connecting">A conectar</string>
     <string name="network_connected">Conectado</string>
-    <string name="network_disconnected">Rede não disponível</string>
+    <string name="network_disconnected">Rede indisponível</string>
 
     <!-- Error -->
     <string name="error_sync">A sincronização falhou: %1$s</string>
     <string name="error_invalid_login">Início de sessão inválido: %1$s</string>
-    <string name="error_json">a aplicação ownCloud Notes está ativada no servidor?</string>
+    <string name="error_json">a aplicação Notas está ativada no servidor?</string>
     <string name="error_io">sem ligação ao servidor</string>
     <string name="error_no_network">sem ligação à rede</string>
     <string name="error_server">O URL/servidor contém erros</string>
-    <string name="error_url_malformed">Endereço do servidor errado</string>
+    <string name="error_url_malformed">Endereço do servidor inválido</string>
     <string name="error_username_password_invalid">Nome de utilizador ou palavra-passe errados</string>
 
     <!-- Snackbar Actions -->
     <string name="snackbar_settings">Definições</string>
 
-
     <!-- About -->
     <string name="about_version_title">Versão</string>
-    <string name="about_version">Está atualmente a usar a versão <strong>v0.9.1</strong></string>
-    <string name="about_maintainer_title">Mantenedor</string>
-    <string name="about_maintainer"><a href="http://www.niedermann.it/">Niedermann IT-Dienstleistungen</a></string>
+    <string name="about_version">Está atualmente a usar a versão &lt;strong>%1$s&lt;/strong></string>
+    <string name="about_maintainer_title">Responsável</string>
     <string name="about_developers_title">Desenvolvedores</string>
-    <string name="about_developers">Stefan Niedermann, HeaDBanGer84, Felix Edelmann</string>
     <string name="about_translators_title">Tradutores</string>
-    <string name="about_translators">pejakm (Sérvio), ageru (Francês (França)), proninyaroslav (Russo), mist (Checo)</string>
-    <string name="about_testers_title">Experimentadores</string>
-    <string name="about_testers">Jan C. Borchardt</string>
+    <string name="about_translators_transifex">Comunidade Nextcloud no &lt;a href="%1$s">Transifex&lt;/a></string>
+    <string name="about_testers_title">Testes</string>
     <string name="about_source_title">Código fonte</string>
-    <string name="about_source">Este projeto está alojado no GitHub: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/">https://github.com/stefan-niedermann/OwnCloud-Notes/</a></string>
+    <string name="about_source">Este projeto está alojado no GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_issues_title">Problemas</string>
-    <string name="about_issues">Pode reportar erros, propor melhorias e pedir funcionalidades no seguidor de problemas do GitHub: <a href="https://github.com/stefan-niedermann/OwnCloud-Notes/issues">https://github.com/stefan-niedermann/OwnCloud-Notes/issues</a></string>
+    <string name="about_issues">Pode reportar erros, propor melhorias e pedir funcionalidades no seguidor de problemas do GitHub: &lt;a href="%1$s">%1$s&lt;/a></string>
+    <string name="about_translate_title">Traduzir</string>
+    <string name="about_translate">Junte-se à equipa Nextcloud no Transifex e ajude-nos a traduzir esta aplicação: &lt;a href="%1$s">%1$s&lt;/a></string>
     <string name="about_app_license_title">Licença da aplicação</string>
     <string name="about_app_license">Esta aplicação está licenciada sob a licença GNU GENERAL PUBLIC LICENSE v3+.</string>
     <string name="about_app_license_button">Ver licença</string>
-    <string name="about_app_icon_disclaimer_title">Ícone da aplicação</string>
-    <string name="about_app_icon_disclaimer"><p>Ícone original criado por <a href="http://jancborchardt.net/" title="Jan C. Borchardt">Jan C. Borchardt</a> de <a href="https://github.com/owncloud/notes/commits/master/img/notes.svg" title="GitHub">www.github.com</a></p></string>
     <string name="about_icons_disclaimer_title">Ícones</string>
-    <string name="about_icons_disclaimer"><p>Todos os restantes ícones usados por esta aplicação são <a href="https://materialdesignicons.com/" title="Link to Website">Material Design Icons</a> criados por Google Inc. e licenciados sob uma licença Creative Commons.</p></string>
-
+    <string name="about_icons_disclaimer">&lt;p>Ícone original criado por %1$s&lt;/p>&lt;p>Todos os restantes ícones usados por esta aplicação são &lt;a href="https://materialdesignicons.com/">Material Design Icons&lt;/a> criados por Google Inc. e licenciados sob uma licença Creative Commons.&lt;/p></string>
     <string name="about_credits_tab_title">Créditos</string>
     <string name="about_contribution_tab_title">Contribuição</string>
     <string name="about_license_tab_title">Licença</string>
 
     <string name="widget_all_notes_title">Todas as notas</string>
     <string name="widget_single_note_title">Nota única</string>
+    <string name="widget_create_note">Criar nota</string>
+
+    <string name="activity_select_single_note">Selecionar nota</string>
+
+    <!-- Shortcuts -->
+    <string name="shortcut_create_long">Criar uma nova nota</string>
+
+    <!-- Array: note modes -->
+    <string-array name="noteMode_entries">
+        <item>Abrir no modo de edição</item>
+        <item>Abrir no modo de visualização</item>
+        <item>Lembrar a minha última escolha</item>
+    </string-array>
+
+    <!-- Plurals -->
+    <plurals name="ab_selected">
+        <item quantity="one">%d selecionado</item>
+        <item quantity="other">%d selecionados</item>
+    </plurals>
 </resources>
