--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="settings_submitting">Connecting &#8230;</string>
     <string name="settings_view_category">View settings</string>
     <string name="settings_note_mode">Display mode for Notes</string>
+    <string name="settings_theme_title">Theme</string>
     <string name="settings_cert_category">Certificates</string>
     <string name="settings_cert_trust_system">Trust system certificates</string>
     <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
@@ -134,11 +135,14 @@
     <string name="pref_key_trust_system_certs" translatable="false">trustSystemCerts</string>
     <string name="pref_key_reset_trust" translatable="false">resetTrust</string>
     <string name="pref_key_note_mode" translatable="false">noteMode</string>
+    <string name="pref_key_theme" translatable="false">darkTheme</string>
     <string name="pref_key_last_note_mode" translatable="false">lastNoteMode</string>
     <string name="pref_value_mode_edit" translatable="false">edit</string>
     <string name="pref_value_mode_preview" translatable="false">preview</string>
     <string name="pref_value_mode_last" translatable="false">last</string>
     <string name="pref_value_mode_note" translatable="false">note</string>
+    <string name="pref_value_theme_light">Light</string>
+    <string name="pref_value_theme_dark">Dark</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
