Reworked single note widget The widget will now check to see if the note exists before trying to display it. Fixes #293. Moved opening of db from getViewAt. Fixed the widget's empty view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,6 +119,7 @@
     <!-- Widgets -->
     <string name="widget_note_list_title">Note list</string>
     <string name="widget_single_note_title">Single note</string>
+    <string name="widget_single_note_placeholder_tv">Note not found</string>
     <string name="widget_create_note">Create Note</string>
     <string name="widget_not_logged_in">Please log in to Notes before using this widget</string>
 
